--- a/assets/package.json
+++ b/assets/package.json
@@ -14,8 +14,10 @@
     "@xterm/addon-fit": "^0.11.0",
     "@xterm/addon-web-links": "^0.12.0",
     "@xterm/xterm": "^6.0.0",
+    "dompurify": "^3.3.1",
     "esbuild": "^0.27.3",
-    "highlight.js": "^11.11.1"
+    "highlight.js": "^11.11.1",
+    "marked": "^17.0.2"
   },
   "devDependencies": {
     "@xterm/headless": "^6.0.0",
