--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -11,7 +11,7 @@ services:
       LANG: C.UTF-8
       LC_ALL: C.UTF-8
     ports:
-      - "1100:1100"
+      - "${SPOTTER_E2E_HOST_PORT:-1101}:1100"
     healthcheck:
       test: ["CMD-SHELL", "curl -fsS http://localhost:1100/ > /dev/null || exit 1"]
       interval: 5s
