--- a/e2e/package.json
+++ b/e2e/package.json
@@ -8,7 +8,7 @@
     "test:update-snapshots-missing": "playwright test --update-snapshots=missing"
   },
   "devDependencies": {
-    "@playwright/test": "^1.56.1",
+    "@playwright/test": "1.58.2",
     "@types/node": "^22.13.10",
     "typescript": "^5.8.3"
   }
