--- a/Dockerfile.live
+++ b/Dockerfile.live
@@ -7,6 +7,7 @@ ENV MIX_ENV=dev \
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
+    build-essential \
     curl \
     file \
     git \
