Use Node 20 in live Docker image

--- a/Dockerfile.live
+++ b/Dockerfile.live
@@ -12,9 +12,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     file \
     git \
     jq \
-    nodejs \
-    npm \
     tmux \
+  && curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+  && apt-get install -y --no-install-recommends nodejs \
   && rm -rf /var/lib/apt/lists/*
 
 RUN npm install -g @anthropic-ai/claude-code
