--- a/docker-compose.otel.yml
+++ b/docker-compose.otel.yml
@@ -2,11 +2,15 @@ services:
   otel-collector:
     image: otel/opentelemetry-collector-contrib:latest
     command: ["--config=/etc/otelcol-contrib/config.yaml"]
+    # The upstream image runs as 10001:10001, which can't write to our bind-mounted ./tmp/otel.
+    # Run as the host user so the file exporter can write spotter-traces.json locally.
+    user: "${UID:-1000}:${GID:-1000}"
     depends_on:
       - jaeger
     ports:
-      - "4317:4317"
-      - "4318:4318"
+      # Local-only by default (no auth). Use docker-compose.otel.tailscale.yml to expose on Tailscale.
+      - "127.0.0.1:4317:4317"
+      - "127.0.0.1:4318:4318"
     volumes:
       - ./priv/otel/collector.yaml:/etc/otelcol-contrib/config.yaml:ro
       - ./tmp/otel:/var/lib/spotter-otel
@@ -16,4 +20,4 @@ services:
     environment:
       COLLECTOR_OTLP_ENABLED: "true"
     ports:
-      - "16686:16686"
+      - "127.0.0.1:16686:16686"
