fix: improve git branch fallback and transcript resolution

--- a/priv/spotter.toml
+++ b/priv/spotter.toml
@@ -1,5 +1,5 @@
 # Transcript source directory
-transcripts_dir = "~/projects/todo"
+transcripts_dir = "~/.claude/projects"
 
 [projects.todo]
 pattern = "^-home-marco-projects-todo"
