Fix Docker live build path dependency resolution

--- a/Dockerfile.live
+++ b/Dockerfile.live
@@ -25,6 +25,7 @@ RUN mix local.hex --force && mix local.rebar --force
 
 COPY mix.exs mix.lock ./
 COPY config config
+COPY vendor/claude_agent_sdk/mix.exs vendor/claude_agent_sdk/mix.exs
 RUN mix deps.get
 
 COPY assets/package.json assets/package-lock.json ./assets/
