--- a/site/package.json
+++ b/site/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "screenshots:process": "node scripts/process_screenshots.mjs"
   },
   "devDependencies": {
     "astro": "^5.14.0"
